fix hidden visible sections

--- a/src/components/WeatherInfo/WeatherInfo.css
+++ b/src/components/WeatherInfo/WeatherInfo.css
@@ -133,6 +133,9 @@ input[type="radio"].visually-hidden {
   .reject {
     position: static;
   }
+  .pudding-for-five-days{
+    padding-top: 310px;
+  }
 }
 
 @media (min-width: 1280px) {
